@@ -1,3 +1,8 @@
+2006-01-20  Tom Tromey  <tromey@redhat.com>
+
+	* gnu/java/net/protocol/http/HTTPURLConnection.java (connect):
+	Read response body for redirect.
+
 2006-01-16  Anthony Green  <green@redhat.com>
 
 	PR classpath/25803
